# Physical-AI-Humanoid-Robotics

./: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
.github/lighthouse/: budget.json
.github/workflows/: deploy.yml  link-check-config.json
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  __init__.py  app.py  main.py  pyproject.toml  start_server.sh  validate_retrieval.py  verify_qdrant.py
backend/models/: __init__.py  chat_models.py
backend/routers/: __init__.py  chat.py
docs/: glossary.md  intro.md  notation.md
docs/module-01-ros2/: 01-introduction.mdx  02-setup.mdx  03-communication.mdx  04-urdf.mdx  _category_.json
docs/module-02-digital-twin/: 05-simulation-foundations.mdx  06-gazebo.mdx  07-unity.mdx  _category_.json
docs/module-03-nvidia-isaac/: 08-isaac-overview.mdx  09-perception.mdx  10-navigation.mdx  _category_.json
docs/module-04-vla/: 11-voice-to-action.mdx  12-llm-planning.mdx  13-multimodal.mdx  _category_.json
docs/module-05-capstone/: 14-system-architecture.mdx  15-sim-to-real.mdx  16-final-demo.mdx  _category_.json
frontend/: .env.development  .env.production
my-website/: package-lock.json
specs/001-002-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-backend-integration/: IMPLEMENTATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-physical-ai-book-specs/: plan.md  spec.md  tasks.md
specs/001-qdrant-embeddings-ingestion/: data-model.md  quickstart.md  spec.md  (+2 more)
(+44 files in other folders)
